--- a/Views/Home/SalaI/HistoriaII.cshtml
+++ b/Views/Home/SalaI/HistoriaII.cshtml
@@ -56,7 +56,7 @@ body {
 <audio id="typingSound" src="/Audio/typing.ogg" preload="auto"></audio>
 
 <script>
-const titulo = "Capítulo II:";
+const titulo = "La Revelación: Libro II";
 const nombre = "@ViewBag.nombre";
 const historia = `${nombre} se encontró una carta que literalmente admitía a planear matar al Presidente, al ver esto se sintió satisfecho con la evidencia e intentó salir pero, la puerta ya no estaba, ${nombre} estaba encerrado y la única puerta que lo liberaría era la que llevaba a la segunda sala, puerta cerrada con llave. ${nombre} no sabía si habría otra salida o si podría encontrar un código, pero tenía que intentarlo. (Recarga la página de Primer Cuarto para continuar ahí).`;
 
