--- a/Views/Home/SalaIII/NoDisponible3.cshtml
+++ b/Views/Home/SalaIII/NoDisponible3.cshtml
@@ -1,8 +1,8 @@
 @{
-    ViewData["Title"] = "Cuarto III";
+    ViewData["Title"] = "NoDisponible3";
 }
-
 <style>
+    
 body {
     background: black;
     margin: 0;
@@ -23,7 +23,7 @@ body {
 
 #titulo-cuarto {
     color: white;
-    font-size: 1000%;
+    font-size: 700%;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     margin-bottom: 15%;
@@ -64,8 +64,8 @@ body {
 </style>
 
 <div id="contenedor-principal">
-    <h1 id="titulo-cuarto">Cuarto III</h1>
-    <div id="boton-entrar" onclick="playButtonSoundAndRedirect()">Entrar</div>
+    <h1 id="titulo-cuarto">No hay nada que ver aquí por ahora</h1>
+    <div id="boton-entrar" onclick="playButtonSoundAndRedirect()">Volver</div>
 </div>
 
 <audio id="buttonSound" src="/Audio/Boton.wav" preload="auto"></audio>
