--- a/Views/Home/SalaIII/Perdiste3.cshtml
+++ b/Views/Home/SalaIII/Perdiste3.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "PerdicionP1";
+    ViewData["Title"] = "PerdicionP3";
 }
 
 <h1>Perdiste</h1>
@@ -10,7 +10,7 @@
     document.addEventListener('keydown', function(event) {
         if (event.code === 'Space') {
             event.preventDefault();
-            window.location.href = '/Home/CuartoI';
+            window.location.href = '/Home/CuartoIII';
         }
     });
 </script>
