--- a/Views/Home/SalaII/Perdiste2.cshtml
+++ b/Views/Home/SalaII/Perdiste2.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "PerdicionP1";
+    ViewData["Title"] = "PerdicionP2";
 }
 
 <style>
@@ -92,7 +92,7 @@
     document.addEventListener('keydown', function(event) {
         if (event.code === 'Space') {
             event.preventDefault();
-            window.location.href = '/Home/CuartoI';
+            window.location.href = '/Home/CuartoII';
         }
     });
 </script>
