--- a/Views/Home/SalaIII/HistoriaIV.cshtml
+++ b/Views/Home/SalaIII/HistoriaIV.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "CuartoPrimeroFinalizado";
+    ViewData["Title"] = "3erCuarto";
 }
 
 <style>
@@ -53,18 +53,23 @@ body {
     <p id="historia-typewriter"></p>
 </div>
 <p id="mensaje-espacio" style="opacity:0; transition: opacity 1s; text-align:center; color:white; font-family:'Fira Mono', 'Roboto Mono', 'Source Code Pro', 'Courier New', Courier, monospace; font-size:120%;">Presione la tecla de espacio para pasar de escena</p>
+<audio id="temaPrincipal" src="/Audio/TemaPrincipal.mp3" preload="auto" autoplay></audio>
 <audio id="typingSound" src="/Audio/typing.ogg" preload="auto"></audio>
 
 <script>
-const titulo = "La Revelación: Libro II";
+const titulo = "La Revelación: Libro III";
 const nombre = "@ViewBag.nombre";
-const historia = `${nombre} abrió la puerta para la próxima sala y se abrumó al ver que era muy similar, no llevaba a ningúna salida pero justo en ese instante, ${nombre} vió otra puerta, una con el símbolo romano "III" y se dió cuenta de que los números que habían en cada puerta decían adonde llevaban, en éste caso, al cuarto número tres. Con nada más que hacer ${nombre} decidió que lo mejor sería abrir o por lo menos intentar ver lo que hay del otro lado. En el cuarto había una computadora, ${nombre} se acercó a ella y se dio cuenta de que había un código de acceso, pero no sabía cuál era, ¿Acaso ${nombre} se perdió de algo o la respuesta estuvo siempre en frente de él?`;
+const historia = `${nombre} le informó a la seguridad que el presidente estaba en riesgo. Ahí se dio cuenta de que tendría que hacer las cosas rápido, vio una puerta a otro cuarto pero... esta estaba abierta, la abrió y entró al próximo cuarto y es ¡¿una cocina?!`;
 
 const h1Element = document.getElementById('titulo-typewriter');
 const pElement = document.getElementById('historia-typewriter');
 const mensajeEspacio = document.getElementById('mensaje-espacio');
+const temaPrincipal = document.getElementById('temaPrincipal');
+temaPrincipal.currentTime = 7.25;
+temaPrincipal.volume = 0.5;
+temaPrincipal.play().catch(()=>{});
 const typingSound = document.getElementById('typingSound');
-typingSound.volume = 0.03;
+typingSound.volume = 0.1;
 function playTypingSound() {
     try {
         typingSound.currentTime = 0;
@@ -127,7 +132,7 @@ document.addEventListener('keydown', function(event) {
                 mensajeEspacio.textContent = 'Presione espacio de nuevo para saltar';
                 esperandoSkip = true;
             } else {
-                window.location.href = '/Home/CuartoII';
+                window.location.href = '/Home/CuartoIII';
             }
         }
     }
